Updated Naive Bayes

--- a/5. Naive Bayes/Naive Bayes.ipynb
+++ b/5. Naive Bayes/Naive Bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,6 +64,28 @@
     "from sklearn import metrics\n",
     "cnf_matrix = metrics.confusion_matrix(y_test, y_pred)\n",
     "print(cnf_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.70995670995671\n",
+      "Precision: 0.5952380952380952\n",
+      "Recall: 0.6024096385542169\n"
+     ]
+    }
+   ],
+   "source": [
+    "#model evaluation\n",
+    "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred))\n",
+    "print(\"Precision:\",metrics.precision_score(y_test, y_pred))\n",
+    "print(\"Recall:\",metrics.recall_score(y_test, y_pred))"
    ]
   },
   {
